[gd_scene load_steps=9 format=3 uid="uid://gvbf2jc7oup1"]

[ext_resource type="Script" path="res://MainScenes/level_up_screen.gd" id="1_xydsh"]
[ext_resource type="AudioStream" uid="uid://dmwsbc1jko77d" path="res://SFX/levelUpSound.wav" id="3_fhree"]
[ext_resource type="FontFile" uid="uid://bdgcqx2r4hwha" path="res://PixelEmulatorFont.ttf" id="4_s07v0"]
[ext_resource type="Theme" uid="uid://ggybb3lf484f" path="res://theme.tres" id="4_vajs1"]

[sub_resource type="LabelSettings" id="LabelSettings_lpfw5"]
font = ExtResource("4_s07v0")
font_size = 50
font_color = Color(0.86, 0.129, 0.2752, 1)

[sub_resource type="Animation" id="Animation_3ub1q"]
resource_name = "flash"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LevelUp:label_settings")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LevelUp:label_settings:font_color:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0.86, -0.25, 0, 0.25, 0, 0.248333, -0.25, 0, 0.25, 0, 0.18, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LevelUp:label_settings:font_color:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0.129, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.467, -0.25, 0, 0.25, 0, 0.180392, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LevelUp:label_settings:font_color:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0.2752, -0.25, 0, 0.25, 0, 0.18, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.972549, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LevelUp:label_settings:font_color:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9)
}

[sub_resource type="Animation" id="Animation_2i8sd"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LevelUp:label_settings:font_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.86, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LevelUp:label_settings:font_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.129, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LevelUp:label_settings:font_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.2752, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LevelUp:label_settings:font_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_itq5b"]
_data = {
"RESET": SubResource("Animation_2i8sd"),
"flash": SubResource("Animation_3ub1q")
}

[node name="levelUpScreen" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xydsh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.796078)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -130.0
offset_right = 225.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button1" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_vajs1")
icon_alignment = 1
expand_icon = true

[node name="Label1" type="Label" parent="HBoxContainer/Button1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = 28.0
offset_right = -21.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_vajs1")
theme_override_colors/font_color = Color(0.878431, 0.14902, 0.333333, 1)
theme_override_colors/font_shadow_color = Color(0.219608, 0.219608, 0.219608, 1)
text = "More exp Gain"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_vajs1")

[node name="Label2" type="Label" parent="HBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 27.0
offset_right = -20.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_vajs1")
theme_override_colors/font_color = Color(0.878431, 0.14902, 0.333333, 1)
theme_override_colors/font_shadow_color = Color(0.219608, 0.219608, 0.219608, 1)
text = "More Exp Gain"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_vajs1")

[node name="Label3" type="Label" parent="HBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = 26.0
offset_right = -20.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_vajs1")
theme_override_colors/font_color = Color(0.878431, 0.14902, 0.333333, 1)
theme_override_colors/font_shadow_color = Color(0.219608, 0.219608, 0.219608, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_fhree")
autoplay = true
bus = &"Sfx"

[node name="LevelUp" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.5
offset_top = -280.0
offset_right = 229.5
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 2
text = "Level Up!"
label_settings = SubResource("LabelSettings_lpfw5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelUpLabelAnim" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_itq5b")
}

[connection signal="pressed" from="HBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
